[package]
name = "lena-chan"
version = "0.1.0"
authors = ["j1nxie"]
edition = "2021"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
float_eq = { version = "1.0.1", features = ["derive"] }
ndarray = "0.15.6"
num-traits = "0.2.15"
